Add mho to the documentation (a new unit added with Version 6).

--- a/prince/helpfiles/locale/en-us/dm14-04-entering_mathematics.xhtml
+++ b/prince/helpfiles/locale/en-us/dm14-04-entering_mathematics.xhtml
@@ -2210,6 +2210,29 @@ Units from the Keyboard</html:sectiontitle></html:section>
 </td>
 </tr>
 <tr>
+<td>Mho</td>
+<td>
+<mml:math display="inline">
+<mml:mrow>
+<mml:mi class="msi_unit" mathcolor="green">&#x2127;</mml:mi>
+</mml:mrow>
+</mml:math>
+</td>
+<td>
+<mml:math display="inline">
+<mml:mrow>
+<mml:mi>u</mml:mi>
+<mml:mo>&InvisibleTimes;</mml:mo>
+<mml:mi>m</mml:mi>
+<mml:mo>&InvisibleTimes;</mml:mo>
+<mml:mi>h</mml:mi>
+<mml:mo>&InvisibleTimes;</mml:mo>
+<mml:mi>o</mml:mi>
+</mml:mrow>
+</mml:math>
+</td>
+</tr>
+<tr>
 <td>Microsiemens</td>
 <td>
 <mml:math display="inline">
