Update of interval, per Carol.

--- a/prince/helpfiles/locale/en-us/dm09-01-vector_calculus.xhtml
+++ b/prince/helpfiles/locale/en-us/dm09-01-vector_calculus.xhtml
@@ -6088,14 +6088,14 @@
 <mml:mo form="infix">&le;</mml:mo>
 <mml:mi>s</mml:mi>
 <mml:mo form="infix">&le;</mml:mo>
-<mml:mi>t</mml:mi>
+<mml:mi>1</mml:mi>
 </mml:mrow>
 </mml:math>,
    <mml:math display="inline" xmlns="http://www.w3.org/1999/xhtml">
 <mml:mrow>
 <mml:mn>0</mml:mn>
 <mml:mo form="infix">&le;</mml:mo>
-<mml:mi>s</mml:mi>
+<mml:mi>t</mml:mi>
 <mml:mo form="infix">&le;</mml:mo>
 <mml:mn>1</mml:mn>
 </mml:mrow>
