Fix duplication of shortcuts, Ctrl+| for double absolute value.

--- a/prince/helpfiles/locale/en-us/dm01-05-basic_techniques.xhtml
+++ b/prince/helpfiles/locale/en-us/dm01-05-basic_techniques.xhtml
@@ -593,7 +593,7 @@ Keyboard Shortcuts</h2>
 </mml:math>
 <br />
 </td>
-<td>Ctrl+\</td>
+<td>Ctrl+|</td>
 </tr>
 <tr>
 <td>Insert &gt; Math Objects &gt; Display</td>
