--- a/prince/helpfiles/locale/en-us/dm14-03-entering_mathematics.xhtml
+++ b/prince/helpfiles/locale/en-us/dm14-03-entering_mathematics.xhtml
@@ -1513,7 +1513,7 @@ Toolbar and Symbols Sidebar</html:sectiontitle></html:section>
 <td>
 <mml:math display="inline">
 <mml:mrow>
-<mml:mi>&gammad;</mml:mi>
+<mml:mi>&#x3dc;</mml:mi>
 </mml:mrow>
 </mml:math>
 </td>
