Use &hellip; instead of \dots to display the dots character.

--- a/prince/helpfiles/locale/en-us/dm14-03-entering_mathematics.xhtml
+++ b/prince/helpfiles/locale/en-us/dm14-03-entering_mathematics.xhtml
@@ -1821,7 +1821,7 @@ Toolbar and Symbols Sidebar</html:sectiontitle></html:section>
 <td>
 <mml:math display="inline">
 <mml:mrow>
-<mml:mi>\dots</mml:mi>
+<mml:mi>&hellip;</mml:mi>
 </mml:mrow>
 </mml:math>
 </td>
