Proper product name capitalization (Scientific WorkPlace, not Scientific Workplace).

--- a/prince/helpfiles/locale/en-us/cd01-02-gettingstarted.xhtml
+++ b/prince/helpfiles/locale/en-us/cd01-02-gettingstarted.xhtml
@@ -26,7 +26,7 @@ things to understand when using MacKichan products is the difference between
 semantic and formative tagging. Most people are used to the latter: You
 wish to emphasize a word, so you select it and choose bold, italics, underline,
 or some other format option. In 
-Scientific Workplace
+Scientific WorkPlace
  (SWP), however, you select the text and apply a meaningful tag; say, "Emphasis."
 The exact way the text is displayed is independent of this tagging. It could
 be changed at production time to suit different requirements:
@@ -38,7 +38,7 @@ how the tag "Emphasis" is printed and displayed. One change instead of many.
 The logical separation of the creative process of writing documents from
 the mechanical process of formatting them has always been at the heart of
 the user interface in 
-Scientific Workplace
+Scientific WorkPlace
  (SWP) and 
 Scientific Word
  (SW). </bodyText>
