--- a/prince/helpfiles/locale/en-us/cd02-01-basics.xhtml
+++ b/prince/helpfiles/locale/en-us/cd02-01-basics.xhtml
@@ -726,7 +726,7 @@ Compute menu contains a wide variety of <indexitem req="varioref"><prisec>comput
 for evaluating mathematical expressions. The <indexitem req="varioref"><prisec>MuPAD commands!on Compute menu</prisec></indexitem>commands
 in the Compute menu are not documented in this book. Learn about them and
 their use in 
- Doing Mathematics with Scientific Workplace and Scientific Notebook, Version
+ Doing Mathematics with Scientific WorkPlace and Scientific Notebook, Version
 6 
 . </bodyText></subsection>
 <subsection id="tsid_3141610">
