--- a/prince/helpfiles/locale/en-us/cd03-02-simpledoc.xhtml
+++ b/prince/helpfiles/locale/en-us/cd03-02-simpledoc.xhtml
@@ -46,7 +46,7 @@ the Open File... command to access it. </bodyText>
 
 <numberedlist>  
 <numberedListItem><bodyText>Choose File <texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Open
-File... The Open Scientific Workplace file dialog box appears. 
+File... The Open Scientific WorkPlace file dialog box appears. 
 <centeredEnv><bodyText>  <hspace dim="-\leftmargini " type="customSpace"/><object data="graphicscd/open_file.png" id="tsid_3141613"/></bodyText></centeredEnv>
   
 </bodyText>
