--- a/prince/helpfiles/locale/en-us/cd06-02-finaltouch.xhtml
+++ b/prince/helpfiles/locale/en-us/cd06-02-finaltouch.xhtml
@@ -41,7 +41,7 @@ Objects. </bodyText>
 <bodyText>If you wish to specify different item levels,
 you can use the Secondary and Tertiary index entry fields. For example,
 if the primary entry is Files, the secondary entry might be Opening, and
-the tertiary entry might be With Scientific Workplace. This allows you to
+the tertiary entry might be With Scientific WorkPlace. This allows you to
 create indexes that are organized and easier for a reader to search. For
 instance: </bodyText><hspace dim="0.0em" type="noIndent"/>
 <table cellspacing="2" cellpadding="2" border="1" opt="l" id="tsid_3141647"><tbody><tr><td><bodyText>
@@ -55,7 +55,7 @@ instance: </bodyText><hspace dim="0.0em" type="noIndent"/>
 <hspace type="twoEmSpace" dim="2em"/>
 <hspace type="emSpace" dim="1em"/>
 <hspace type="emSpace" dim="1em"/>with
-Scientific Workplace
+Scientific WorkPlace
 </bodyText>
 </td></tr><tr><td><bodyText>
 <hspace type="twoEmSpace" dim="2em"/>
