Change msibreak to msibr (mostly deletions as they are not needed in the help files).

--- a/prince/helpfiles/locale/en-us/cd01-00-gettingstarted.xhtml
+++ b/prince/helpfiles/locale/en-us/cd01-00-gettingstarted.xhtml
@@ -53,7 +53,7 @@ it. </bodyText>
 to using SWP. Early chapters outline basic document-creation tasks. Later
 chapters discuss different methods of document production, structuring documents
 for typesetting, and other more advanced tasks. The appendices summarize
-the command menus, toolbars, and keyboard shortcuts. </bodyText><msibreak type="newPage"><newPageRule/></msibreak>
+the command menus, toolbars, and keyboard shortcuts. </bodyText>
 <bodyText>The
 book itself was produced using SWP Version 6, and serves as an example of
 the kinds of things you can do: Dropped capitals, margin notes, references, inline
