--- a/prince/helpfiles/locale/en-us/cd01-01-gettingstarted.xhtml
+++ b/prince/helpfiles/locale/en-us/cd01-01-gettingstarted.xhtml
@@ -141,7 +141,7 @@ code, graphics, or anything else that can go on the clipboard. </bodyText></subs
 <subsection id="tsid_3141610">
 <sectiontitle>Change your mind</sectiontitle> 
 <bodyText>Invoke the new
-Unlimited Undo capability with the standard <msibreak type="lineBreak" invisDisplay="↵"><br/></msibreak>Ctrl+z
+Unlimited Undo capability with the standard <msibr type="lineBreak" invisDisplay="↵"><br/></msibr>Ctrl+z
 (Command+z for Macintosh) shortcut. </bodyText></subsection>
 <subsection id="tsid_3141611">
 <sectiontitle>Enter tables precisely</sectiontitle> 
