--- a/prince/helpfiles/locale/en-us/cd02-00-basics.xhtml
+++ b/prince/helpfiles/locale/en-us/cd02-00-basics.xhtml
@@ -54,5 +54,5 @@ shortcuts. Many tools may be invoked in multiple ways to suit your style
 of work: via menu, button, or keyboard. In this manual, we generally indicate
 only one of the possible ways of accessing a tool, generally via the menus.
 A table of alternative methods is given at the end of each subsequent chapter
-of this manual. Appendix A lists all command shortcuts. </bodyText><vspace dim="\fill " type="customSpace"/><msibreak type="newPage"><newPageRule/></msibreak></chapter><chapter xmlns="http://www.w3.org/1999/xhtml" id="tsid_3141592" msiSelectionManagerID="2"><br/></chapter></body> 
+of this manual. Appendix A lists all command shortcuts. </bodyText><vspace dim="\fill " type="customSpace"/></chapter><chapter xmlns="http://www.w3.org/1999/xhtml" id="tsid_3141592" msiSelectionManagerID="2"><br/></chapter></body> 
 </html>
