--- a/prince/helpfiles/locale/en-us/cd02-01-basics.xhtml
+++ b/prince/helpfiles/locale/en-us/cd02-01-basics.xhtml
@@ -395,7 +395,7 @@ you how to enter frames. </bodyText><vspace dim="1in" type="customSpace"/></subs
 a <indexitem req="varioref"><prisec>breaks</prisec></indexitem><notewrapper xmlns="http://www.w3.org/1999/xhtml"><note type="marginpar" id="tsid_3141753"><bodyText><vspace dim="\marginparvspace " type="customSpace"/>
 <vspace dim="9pt" type="customSpace"/> <object data="graphicscd/breaks.png" id="tsid_3141717"/>
 </bodyText></note></notewrapper> division in the text at the insertion point,
-such as a discretionary hyphen, line break, or page break. </bodyText><msibreak type="newPage"><newPageRule/></msibreak></subsubsection>
+such as a discretionary hyphen, line break, or page break. </bodyText></subsubsection>
 <subsubsection id="tsid_3141650">
 <sectiontitle>Spacing Objects</sectiontitle> 
 <bodyText><indexitem req="varioref"><prisec>Spacing Objects!on Insert menu</prisec></indexitem><indexitem req="varioref"><prisec>space</prisec></indexitem></bodyText>
@@ -597,7 +597,7 @@ box allowing you to go to a selected marker location from among those shown.
 <sectiontitle>To Paragraph...</sectiontitle> 
 <bodyText>Advance <indexitem req="varioref"><prisec>To Paragraph!on Go menu</prisec></indexitem>to
 a specified <indexitem req="varioref"><prisec>paragraph!Go To command</prisec></indexitem>paragraph
-number or forward or backward by a given number of paragraphs. </bodyText><msibreak type="newPage"><newPageRule/></msibreak>
+number or forward or backward by a given number of paragraphs. </bodyText>
 </subsubsection>
 </subsection>
 <subsection id="tsid_3141606">
