--- a/prince/helpfiles/locale/en-us/cd03-00-simpledoc.xhtml
+++ b/prince/helpfiles/locale/en-us/cd03-00-simpledoc.xhtml
@@ -49,5 +49,6 @@ files. </bodyText><bodyText>
 and how to open existing documents saved in various file formats. It also
 explains how Version 6 saves and closes documents and describes the export
 options that are available to you.
-The chapter also discusses creating document copies. </bodyText><bodyText><vspace xmlns="http://www.w3.org/1999/xhtml" dim="\fill " type="customSpace"/><msibreak xmlns="http://www.w3.org/1999/xhtml" type="newPage"><newPageRule/></msibreak></bodyText><chapter xmlns="http://www.w3.org/1999/xhtml" id="tsid_3141594" msiSelectionManagerID="38"></chapter></body> 
+The chapter also discusses creating document copies. </bodyText>
+</body> 
 </html>
