--- a/prince/helpfiles/locale/en-us/cd04-01-editingdocs.xhtml
+++ b/prince/helpfiles/locale/en-us/cd04-01-editingdocs.xhtml
@@ -26,7 +26,7 @@ the concept of a document shell was important to the process of creating
 a new document, understanding how MacKichan software treats different kinds
 of information is important before you enter and edit text. The next sections
 of this chapter note the differences between entering text and entering
-mathematics, and talk about the importance of tagging. </bodyText><vspace dim="\fill " type="customSpace"/><msibreak type="newPage"><newPageRule/></msibreak>
+mathematics, and talk about the importance of tagging. </bodyText><vspace dim="\fill " type="customSpace"/>
 <subsection id="tsid_3141623">
 <sectiontitle>Text <italics>vs.</italics> Mathematics</sectiontitle> 
 <bodyText><indexitem req="varioref"><prisec>Text vs. Math</prisec></indexitem>At
