--- a/prince/helpfiles/locale/en-us/cd04-03-editingdocs.xhtml
+++ b/prince/helpfiles/locale/en-us/cd04-03-editingdocs.xhtml
@@ -124,7 +124,7 @@ to enter mathematics. </bodyText>
 and edit your own automatic substitution sequences. For example, if you
 frequently use the phrase "Version 6 of Scientific WorkPlace", you might
 define an automatic substitution sequence called swp so that you can enter
-the phrase <msibreak type="lineBreak" invisDisplay="↵"><br/></msibreak>quickly.
+the phrase quickly.
 You can enable or disable automatic substitution at any time. If you disable
 it, the program doesn't make a substitution when you type the corresponding
 sequences of letters and numbers. </bodyText>
