--- a/prince/helpfiles/locale/en-us/cd04-07-editingdocs.xhtml
+++ b/prince/helpfiles/locale/en-us/cd04-07-editingdocs.xhtml
@@ -168,8 +168,7 @@ a placement for the frame. It may be In-Line (displayed within a text line),
 Displayed (on a line by itself), or Floating. Floating frames get placed
 in the best possible position at typesetting time. You can anchor them to
 a specific location (Here) and also indicate where in reference that that
-position they <msibreak type="lineBreak" invisDisplay="↵"><br/></msibreak>should
-be placed (Left, Right, Inside, etc.). </bodyText></numberedListItem>
+position they should be placed (Left, Right, Inside, etc.). </bodyText></numberedListItem>
 <numberedListItem><bodyText>On
 the Frame tab, choose margins and borders as desired. </bodyText></numberedListItem>
 <numberedListItem><bodyText>Click
@@ -205,7 +204,7 @@ Insert <texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Not
 The Note dialog box appears. </bodyText></numberedListItem>
 <numberedListItem><bodyText>Choose
 the type of note from the drop-down list. You may choose footnote, margin
-note, margin hint, solution note, <msibreak type="lineBreak" invisDisplay="↵"><br/></msibreak>problem-solving
+note, margin hint, solution note, problem-solving
 hint, note, and answer note. The placement of each varies; try experimenting
 with them to get the desired effect. </bodyText></numberedListItem>
 <numberedListItem><bodyText>Click
