--- a/prince/helpfiles/locale/en-us/cd05-01-workwithmath.xhtml
+++ b/prince/helpfiles/locale/en-us/cd05-01-workwithmath.xhtml
@@ -23,7 +23,7 @@
 <sectiontitle>Before You Begin</sectiontitle> 
 <bodyText>The next sections
 of this chapter recapitulate the differences between entering text and entering
-mathematics. </bodyText><vspace dim="\fill " type="customSpace"/><msibreak type="newPage"><newPageRule/></msibreak>
+mathematics. </bodyText><vspace dim="\fill " type="customSpace"/>
 <subsection id="tsid_3141638">
 <sectiontitle>Text <italics>vs.</italics> Mathematics</sectiontitle> 
 <bodyText><indexitem req="varioref"><prisec>mathematics!and text</prisec></indexitem><indexitem req="varioref"><prisec>Math vs. Text</prisec></indexitem>As
