--- a/prince/helpfiles/locale/en-us/cd05-04-workwithmath.xhtml
+++ b/prince/helpfiles/locale/en-us/cd05-04-workwithmath.xhtml
@@ -576,7 +576,7 @@ versa. </bodyText>
 <bodyText>Several View menu commands help you work with
 displayed mathematics. If you check Helper lines, the program displays a
 box outlining the display. If you check Input boxes, the program displays
-<msibreak type="lineBreak" invisDisplay="↵"><br/></msibreak>outlines
+outlines
 for the template input boxes. These outlines don't appear in print when
 you typeset. </bodyText>
 <bodyText>The program correctly formats displayed
