--- a/prince/helpfiles/locale/en-us/cd06-01-finaltouch.xhtml
+++ b/prince/helpfiles/locale/en-us/cd06-01-finaltouch.xhtml
@@ -24,7 +24,7 @@
 
 <bodyText>Whether or not you typeset, you can create appealing documents
 with SWP, SW, and SNB. Understanding the differences in the document production
-methods will help you decide when to use each one. </bodyText><vspace dim="\fill " type="customSpace"/><msibreak type="newPage"><newPageRule/></msibreak>
+methods will help you decide when to use each one. </bodyText>
 <subsection id="tsid_3141619">
 <sectiontitle><shortTitle>Typesetting</shortTitle>About Typesetting</sectiontitle>
 
@@ -93,7 +93,7 @@ with <texb enc="1" name="pdfLaTeX"><![CDATA[\pdfLaTeX{}]]></texb> or <texb enc="
 </bodyText></bulletListItem>
 <bulletListItem><bodyText>When a finely typeset
 appearance and automatically generated document elements aren't a priority,
-when you need output <msibreak type="lineBreak" invisDisplay="↵"><br/></msibreak>quickly,
+when you need output quickly,
 or when you're producing for Web viewing, use direct print. 
 
 </bodyText>
