--- a/prince/helpfiles/locale/en-us/cd06-02-finaltouch.xhtml
+++ b/prince/helpfiles/locale/en-us/cd06-02-finaltouch.xhtml
@@ -149,10 +149,10 @@ You can create a bibliography manually or automatically using <texlogo xmlns="ht
 <sectiontitle><shortTitle>Creating manual bibliographies</shortTitle>Creating
 Manual Bibliographies</sectiontitle> 
 <bodyText>A manual bibliography, which
-works just like a series of <msibreak type="lineBreak" invisDisplay="↵"><br/></msibreak>cross-references,
+works just like a series of cross-references,
 is convenient when the list of references is short and you don't plan to
 use those references in other articles or books. You must format entries
-yourself, a disadvantage if you later decide to <msibreak type="lineBreak" invisDisplay="↵"><br/></msibreak>change
+yourself, a disadvantage if you later decide to change
 the style of the bibliography to suit a different requirement. For example,
 if you format the bibliography of an article for a journal that requires
 book titles in italics, then later decide to submit the article to a different
@@ -163,7 +163,7 @@ changes manually. </bodyText>
 
 <numberedlist>  
 <numberedListItem><bodyText>Choose Typeset <texb enc="1" name="textrightarrow"><![CDATA[\textrightarrow]]></texb>Bibliography
-Choice... The Bibliography <msibreak type="lineBreak" invisDisplay="↵"><br/></msibreak>Choice
+Choice... The Bibliography Choice
 dialog box appears. </bodyText><indexitem req="varioref"><prisec>bibliography!manual</prisec></indexitem>
 </numberedListItem>
 <numberedListItem><bodyText>Choose Manual entry. </bodyText></numberedListItem>
