--- a/prince/helpfiles/locale/en-us/cd06-06-finaltouch.xhtml
+++ b/prince/helpfiles/locale/en-us/cd06-06-finaltouch.xhtml
@@ -23,7 +23,7 @@
 <sectiontitle>Shortcuts</sectiontitle> 
 <bodyText>The following shows shortcuts
 and accelerators for the commands and capabilities covered in this chapter.
-</bodyText><msibreak type="newPage"><newPageRule/></msibreak>
+</bodyText>
 <bodyText>
 <appendix/>
 </bodyText>
