--- a/prince/helpfiles/locale/en-us/cd07-00-shortcuts.xhtml
+++ b/prince/helpfiles/locale/en-us/cd07-00-shortcuts.xhtml
@@ -36,7 +36,7 @@
 of all the shortcuts documented in the book is included here. </bodyText>
 <section id="tsid_3141639">
 <sectiontitle><shortTitle>Document Creation</shortTitle>Document Creation
-Shortcuts</sectiontitle> <vspace dim="\fill " type="customSpace"/><msibreak type="newPage"><newPageRule/></msibreak></section>
+Shortcuts</sectiontitle> <vspace dim="\fill " type="customSpace"/></section>
 <section id="tsid_3141640">
 <sectiontitle><shortTitle>Document Editing</shortTitle>Document Editing
 Shortcuts</sectiontitle> </section>
