One file with corrected type attributes on the <object>s

--- a/prince/helpfiles/locale/en-us/dm06-05-plotting.xhtml
+++ b/prince/helpfiles/locale/en-us/dm06-05-plotting.xhtml
@@ -151,7 +151,7 @@
 </html:bodyText>
 <html:bodyText>
 <html:msiframe pos="inline" height=".23" width="3.482" units="in" placeLocation="" topmargin=".059" sidemargin=".118" style="margin: 5.67px auto;" msi_resize="true">
-<html:object style="width: 3.482in; height: .23in;" imageWidth="3.482in" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="graphics/dm06-05-plotting__1.png" />
+<html:object style="width: 3.482in; height: .23in;" imageWidth="3.482in" alt="Generated Plot"  data="graphics/dm06-05-plotting__1.png" />
 <html:imagecaption>
 </html:imagecaption>
 </html:msiframe>
@@ -234,7 +234,7 @@
 <html:graph>
 <html:msiframe pos="display" height="3.169" width="3.169" units="in" placeLocation="" topmargin=".059" sidemargin=".118" style="margin: 5.67px auto;">
 <html:plotwrapper units="in" msi_resize="true" padding=".079" style=" padding: .079in">
-<html:object style="width: 3.011in; height: 3.011in;" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="plots/LY500L38.xvz" />
+<html:object style="width: 3.011in; height: 3.011in;" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+gzip" data="plots/LY500L38.xvz" />
 </html:plotwrapper>
 </html:msiframe>
 </html:graph>
@@ -373,7 +373,7 @@
 <html:graph>
 <html:msiframe pos="inline" height="3.169" width="4.172" units="in" placeLocation="" topmargin=".059" sidemargin=".118" style="margin: 5.67px auto;">
 <html:plotwrapper units="in" msi_resize="true" padding=".079" style=" padding: .079in">
-<html:object style="width: 4.015in; height: 3.011in;" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="plots/LY503Q3A.xvz" />
+<html:object style="width: 4.015in; height: 3.011in;" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+gzip" data="plots/LY503Q3A.xvz" />
 </html:plotwrapper>
 </html:msiframe>
 </html:graph>
@@ -643,7 +643,7 @@
 <html:graph>
 <html:msiframe pos="inline" height="3.169" width="3.169" units="in" placeLocation="" topmargin=".059" sidemargin=".118" style="margin: 5.67px auto;">
 <html:plotwrapper units="in" msi_resize="true" padding=".079" style=" padding: .079in">
-<html:object style="width: 3.011in; height: 3.011in;" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="plots/LY507M3B.xvz" />
+<html:object style="width: 3.011in; height: 3.011in;" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+gzip" data="plots/LY507M3B.xvz" />
 </html:plotwrapper>
 </html:msiframe>
 </html:graph>
@@ -967,7 +967,7 @@
 <html:graph>
 <html:msiframe pos="inline" height="3.169" width="3.169" units="in" placeLocation="" topmargin=".059" sidemargin=".118" style="margin: 5.67px auto;">
 <html:plotwrapper units="in" msi_resize="true" padding=".079" style=" padding: .079in">
-<html:object style="width: 3.011in; height: 3.011in;" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="plots/LY50AE3C.xvz" />
+<html:object style="width: 3.011in; height: 3.011in;" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+gzip" data="plots/LY50AE3C.xvz" />
 </html:plotwrapper>
 </html:msiframe>
 </html:graph>
@@ -1110,7 +1110,7 @@
 <html:graph>
 <html:msiframe pos="inline" height="3.169" width="3.169" units="in" placeLocation="" topmargin=".059" sidemargin=".118" style="margin: 5.67px auto;">
 <html:plotwrapper units="in" msi_resize="true" padding=".079" style=" padding: .079in">
-<html:object style="width: 3.011in; height: 3.011in;" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="plots/LY50DU3F.xvz" />
+<html:object style="width: 3.011in; height: 3.011in;" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+gzip" data="plots/LY50DU3F.xvz" />
 </html:plotwrapper>
 </html:msiframe>
 </html:graph>
@@ -1305,7 +1305,7 @@
 <html:graph>
 <html:msiframe pos="inline" height="2.806" width="2.991" units="in" placeLocation="" topmargin=".059" sidemargin=".118" style="margin: 5.67px auto;">
 <html:plotwrapper units="in" msi_resize="true" padding=".079" style=" padding: .079in">
-<html:object style="width: 2.833in; height: 2.649in;" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="plots/LY54886A.xvz" />
+<html:object style="width: 2.833in; height: 2.649in;" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+gzip" data="plots/LY54886A.xvz" />
 </html:plotwrapper>
 </html:msiframe>
 </html:graph>
@@ -1460,7 +1460,7 @@ Implicit Plots</html:sectiontitle></html:section>
 <html:graph>
 <html:msiframe pos="inline" height="3.157" width="3.199" units="in" placeLocation="" topmargin=".059" sidemargin=".118" style="margin: 5.67px auto;">
 <html:plotwrapper units="in" msi_resize="true" padding=".079" style=" padding: .079in">
-<html:object style="width: 3.042in; height: 3in;" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="plots/LY51133O.xvz" />
+<html:object style="width: 3.042in; height: 3in;" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+gzip" data="plots/LY51133O.xvz" />
 </html:plotwrapper>
 </html:msiframe>
 </html:graph>
@@ -1619,7 +1619,7 @@ Inequality Plots</html:sectiontitle></html:section>
 </html:bodyText>
 <html:bodyText>
 <html:msiframe pos="inline" height="NaN" width="NaN" units="px" placeLocation="" topmargin="5.669" sidemargin="11.339" style="margin: 5.67px auto;" msi_resize="true">
-<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="graphics/dm06-05-plotting__9.png" />
+<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" alt="Generated Plot" data="graphics/dm06-05-plotting__9.png" />
 <html:imagecaption>
 </html:imagecaption>
 </html:msiframe>
