--- a/prince/res/cm2/cm2.html
+++ b/prince/res/cm2/cm2.html
@@ -93,7 +93,7 @@
     var divs = document.documentElement.getElementsByTagName("DIV");
     for (var i = 0; i < divs.length; i++)
     {
-      if (divs.item(i).getAttribute("class") == "CodeMirror")
+      if (divs.item(i).getAttribute("class") == "CodeMirror CodeMirror-wrap")
       return divs.item(i);
     }
     return null;
